# halfcircle-clf

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  api.py  app.py  pyproject.toml  requirements-api.txt  requirements.txt
notebooks/: generate_dataset.ipynb  generate_half_circles.ipynb  generate_noise_images.ipynb  predict.ipynb  random.ipynb  train.ipynb
src/data/: config.py  dataset.py  generate.py  transforms.py  utils.py
src/modeling/: model.py
