[project]
name = "aitt-symbol-clf"
version = "0.1.0"
description = "Train a Half-Circle grayscale image classifier using pytorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pymupdf>=1.25.3",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchmetrics>=1.7.2",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
]
docs = []
