[project]
name = "aitt-symbol-clf"
version = "0.1.0"
description = "Train a Half-Circle grayscale image classifier using pytorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[project.optional-dependencies]

dev = [
    "torchmetrics>=1.0.3",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pymupdf>=1.25.3",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "jupyter>=1.1.1",
    "notebook>=7.3.2"
]
